--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile project(':data')
     compile project(':model')
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.android.support:cardview-v7:23.1.1'
 }
