--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile project(':data')
+    compile project(':api')
     compile project(':model')
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.android.support:cardview-v7:23.1.1'
