--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile project(':model')
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
 }
