--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+    compile 'com.github.johnpersano:supertoasts:2.0'
 }
