--- a/api/build.gradle
+++ b/api/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile 'io.reactivex:rxjava:1.1.8'
     compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.facebook.stetho:stetho:1.4.0'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.4.0'
     compile project(':model')
 }
