--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
@@ -24,12 +24,12 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':api')
     compile project(':model')
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:design:23.2.0'
+    compile 'com.android.support:cardview-v7:23.2.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.xhb:xbanner:1.1.2'
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     compile 'com.github.johnpersano:supertoasts:2.0'
     compile 'com.tubb.smrv:swipemenu-recyclerview:5.3.0'
