--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,12 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:name=".MyApplication"
@@ -13,6 +19,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service android:name="com.amap.api.location.APSService"/>
+        <meta-data android:name="com.amap.api.v2.apikey" android:value="29a14f21c3928ed2a8326cdc726a04b7"/>
         <activity android:name=".activity.MainActivity" android:launchMode="singleTask"/>
         <activity android:name=".activity.AdPageActivity" android:launchMode="singleTask"/>
         <activity android:name=".activity.LaunchPageActivity" android:launchMode="singleTask">
@@ -33,6 +41,8 @@
         <activity android:name=".activity.LoginValidationActivity" android:launchMode="singleTask"/>
         <activity android:name=".activity.ShopCartActivity" android:launchMode="singleTask"/>
         <activity android:name=".activity.ConfirmOrderActivity" android:launchMode="singleTask"/>
+        <activity android:name=".activity.ModifyAddressActivity" android:launchMode="singleTask"/>
+        <activity android:name=".activity.EditAddressActivity" android:launchMode="singleTask"/>
     </application>
 
 </manifest>
