--- a/model/build.gradle
+++ b/model/build.gradle
@@ -21,4 +21,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    provided 'com.baoyz.pg:compiler:2.1.1'
+    compile 'com.baoyz.pg:core:2.1.1'
 }
