--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 23
@@ -29,8 +30,11 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.2.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.xhb:xbanner:1.1.2'
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     compile 'com.github.johnpersano:supertoasts:2.0'
     compile 'com.tubb.smrv:swipemenu-recyclerview:5.3.0'
+    compile 'homhomlin.lib:apsts:1.4.0'
+    compile 'com.github.hotchemi:permissionsdispatcher:2.2.0'
+    compile 'me.leefeng:lfrecyclerview:1.0.1'
+    apt 'com.github.hotchemi:permissionsdispatcher-processor:2.2.0'
 }
